Layout fixes (#21)
* add fixed background

* fix logo and background

* fix mat-tab-header color

* remove scrollbar on chrome

* add paddings on mat-standard-chip

* fix footer and side scrollbar on chrome

- update background

* fix icon and margins

--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -1,12 +1,12 @@
 :host {
   display: flex;
   flex-direction: column;
-  width: 100% -49px;
-
-  padding: 49px;
+  width: 100% -50px;
+  padding: 50px;
+  height: 100%;
 
   .content {
-    min-height: calc(100vh - 275px);
-    margin-top: 120px;
+    max-height: 100vh -300px;
+    overflow-y: scroll;
   }
 }
